--- a/AplicacaoGerenciamento/NodeStr/package.json
+++ b/AplicacaoGerenciamento/NodeStr/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.6.13",
+    "mongoose": "^5.7.1",
     "mongoose-paginate": "^5.0.3",
     "require-dir": "^1.2.0"
   },
