Corrigindo depedendencias do projeto

--- a/Código/AplicacaoGerenciamento/WebAPI/Business/Service.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/Business/Service.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj" />
-    <ProjectReference Include="..\Persistences\Persistences.csproj" />
+    <ProjectReference Include="..\Models\Model.csproj" />
+    <ProjectReference Include="..\Persistences\Persistence.csproj" />
   </ItemGroup>
 
 </Project>
