--- a/Código/AplicacaoGerenciamento/WebAPI/Persistences/Persistence.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/Persistences/Persistence.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Models\Model.csproj" />
   </ItemGroup>
 
 </Project>
