--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/SalasUfsWeb.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/SalasUfsWeb.csproj
@@ -10,6 +10,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\Business\Service.csproj" />
+    <ProjectReference Include="..\Models\Model.csproj" />
+    <ProjectReference Include="..\Persistences\Persistence.csproj" />
   </ItemGroup>
 
 </Project>
