--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/appsettings.json
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MySqlConnection": "server=localhost;port=3306;user=root;password=igorb95;database=str_db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
