--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/appsettings.json
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;port=3306;user=root;password=123456;database=str_db"
+    "MySqlConnection": "server=localhost;port=3306;user=root;password=igorb95;database=str_db"
   },
   "Logging": {
     "LogLevel": {
