==== AUTENTICAÇÃO NA APLICAÇÃO WEB ====
1 - Criação da Controller de autenticação, contendo apenas o metodo que realizará a validação e geração do token.

2 - Configuração do Startup para suportar token JWT, edição do appsettings sendo adicionada a chave de segurança do token.

3 - Adição da referencia a Utils no projeto WebAPI.

--- a/Código/AplicacaoGerenciamento/WebAPI/WebAPI/WebAPI.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/WebAPI/WebAPI.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\Business\Service.csproj" />
     <ProjectReference Include="..\Models\Model.csproj" />
     <ProjectReference Include="..\Persistences\Persistence.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
 </Project>
