--- a/Código/AplicacaoGerenciamento/WebAPI/WebAPI/WebAPI.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/WebAPI/WebAPI.csproj
@@ -21,4 +21,6 @@
     <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
