--- a/Código/AplicacaoGerenciamento/WebAPI/Business/Service.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/Business/Service.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Models\Model.csproj" />
     <ProjectReference Include="..\Persistences\Persistence.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
 </Project>
