--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/SalasUfsWeb.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/SalasUfsWeb.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
+    <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
