Integracao parcial do protótipo

--- a/Código/AplicacaoGerenciamento/WebAPI/WebAPI/appsettings.json
+++ b/Código/AplicacaoGerenciamento/WebAPI/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "SecurityKey": "Esta é a ch4v3 que 0 JWT ut1l7zará para ger@r o token",
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;port=3306;user=root;password=123456;database=str_db"
+    "MySqlConnection":  "server=mysql5035.site4now.net;port=3306;user=a6b2e7_str;password=98287294i@;database=db_a6b2e7_str"
   },
   "Logging": {
     "LogLevel": {
