--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/SalasUfsWeb.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/SalasUfsWeb.csproj
@@ -48,5 +48,7 @@
     <ProjectReference Include="..\Persistences\Persistence.csproj" />
     <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
  
 </Project>
