--- a/Código/AplicacaoGerenciamento/WebAPI/WebAPI/appsettings.json
+++ b/Código/AplicacaoGerenciamento/WebAPI/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "SecurityKey": "Esta é a ch4v3 que 0 JWT ut1l7zará para ger@r o token",
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;port=3306;user=root;password=1234;database=str_db"
+    "MySqlConnection": "server= mysql5039.site4now.net;port=3306;user=a6c40a_tcc;password=98425537i#;database=db_a6c40a_tcc"
   },
   "Logging": {
     "LogLevel": {
