--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/appsettings.json
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "server= mysql5039.site4now.net;port=3306;user=a6c40a_tcc;password=98425537i#;database=db_a6c40a_tcc"
+    "MySqlConnection": "server=localhost;port=3306;user=root;password=1234;database=str_db"
   },
   "Logging": {
     "LogLevel": {
