--- a/Código/AplicacaoGerenciamento/WebAPI/Business/Service.csproj
+++ b/Código/AplicacaoGerenciamento/WebAPI/Business/Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Models\Model.csproj" />
     <ProjectReference Include="..\Persistences\Persistence.csproj" />
     <ProjectReference Include="..\Utils\Utils.csproj" />
