adicionando get horarios semana e adptando para nova estrutura

--- a/Codigo/ModuloDeSoftware/WebAPI/Models/Model.csproj
+++ b/Codigo/ModuloDeSoftware/WebAPI/Models/Model.csproj
@@ -3,8 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+	
+  <PropertyGroup>
+	<Nullable>enable</Nullable>
+	<LangVersion>8.0</LangVersion>
+  </PropertyGroup>
 
-  <ItemGroup>
+	<ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
