--- a/Codigo/ModuloDeSoftware/WebAPI/Business/Service.csproj
+++ b/Codigo/ModuloDeSoftware/WebAPI/Business/Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Models\Model.csproj" />
     <ProjectReference Include="..\Persistences\Persistence.csproj" />
     <ProjectReference Include="..\Utils\Utils.csproj" />
