--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/SalasUfsWeb.csproj
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/SalasUfsWeb.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
     <TypeScriptToolsVersion>3.1</TypeScriptToolsVersion>
   </PropertyGroup>
 
