Adiciona autenticacao na Web Api

--- a/Codigo/ModuloDeSoftware/WebAPI/WebAPI/WebAPI.csproj
+++ b/Codigo/ModuloDeSoftware/WebAPI/WebAPI/WebAPI.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Controllers\HorarioSalaController.cs~RF12555028.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
