--- a/Codigo/ModuloDeSoftware/WebAPI/Business/Service.csproj
+++ b/Codigo/ModuloDeSoftware/WebAPI/Business/Service.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="M2MqttDotnetCore" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
