--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/appsettings.json
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "MySqlConnection": "server=localhost;port=3306;user=root;password=;database=str_db"
   },
+  "MqttOptions": {
+    "BrokerAddress": "",
+    "ClientId": "",
+    "Port": 0,
+    "UserId": "",
+    "Password": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
