--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
       
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: './${{env.work-directory}}/'
+      working-directory: ./WebAPI
 
     - name: Build Application
       run: dotnet build --no-restore
-      working-directory: './${{env.work-directory}}/'
+      working-directory: ./WebAPI
       
     - name: Publish Application
       run:  dotnet publish ./WebAPI/WebAPI.sln --configuration Release --no-restore --output ./publish 
