--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       working-directory: ./WebAPI
       
     - name: Publish Application
-      run:  dotnet publish ./WebAPI/WebAPI.sln --configuration Release --no-restore --output ./publish 
+      run:  dotnet publish WebAPI/WebAPI.sln --configuration Release --no-restore --output ./publish 
       
 #    - name: Upload via FTP
 #      uses: SamKirkland/FTP-Deploy-Action@4.3.0
