--- a/.github/workflows/main-sistema-web.yml
+++ b/.github/workflows/main-sistema-web.yml
@@ -13,9 +13,10 @@ jobs:
       work-directory: Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb
 
     steps:
+    - name: Execute checkout in repository
     - uses: actions/checkout@v2
     
-    - name: Setup .NET
+    - name: Configure .NET version
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1
