--- a/.github/workflows/main-sistema-web.yml
+++ b/.github/workflows/main-sistema-web.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
     - name: Execute checkout in repository
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
     
     - name: Configure .NET version
       uses: actions/setup-dotnet@v1
