--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/appsettings.json
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;port=3306;user=root;password=;database=str_db"
+    "MySqlConnection": "server=localhost;port=3306;user=root;password=1234;database=str_db"
   },
   "Logging": {
     "LogLevel": {
