feat: Atualiza branch de deploy

--- a/.github/workflows/main-sistema-web.yml
+++ b/.github/workflows/main-sistema-web.yml
@@ -2,7 +2,7 @@ name: AutomacaoSalas-WEB CI
 
 on:
   push:
-    branches: [ feature/deploy-automatico ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
