--- a/.github/workflows/main-web-api.yml
+++ b/.github/workflows/main-web-api.yml
@@ -2,7 +2,7 @@ name: AutomacaoSalas-API CI
 
 on:
   push:
-    branches: [ feature/deploy-automatico ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
