--- a/.github/workflows/main-web-api.yml
+++ b/.github/workflows/main-web-api.yml
@@ -2,7 +2,7 @@ name: AutomacaoSalas-API CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ feature/deploy-automatico ]
   pull_request:
     branches: [ master ]
 
@@ -20,12 +20,19 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1
-      
+
+    - name: Replace variables
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: '${{env.work-directory}}/appsettings.json'
+      env:
+        AppSettings.ConnectionStrings.MySqlConnection: "${{secrets.DATABASE_CONNECTION}}"
+
     - name: Restore dependencies
       run: |
         cd ${{env.work-directory}}
         dotnet restore
-
+  
     - name: Build Application
       run: |
         cd ${{env.work-directory}}
