atualização da arquitetura .net 8 faltando corrigir poucos erros de compilação.

--- a/Codigo/ModuloDeSoftware/WebAPI/Business/Service.csproj
+++ b/Codigo/ModuloDeSoftware/WebAPI/Business/Service.csproj
@@ -1,16 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Models\Model.csproj" />
-    <ProjectReference Include="..\Persistences\Persistence.csproj" />
+    <ProjectReference Include="..\Persistence\Persistence.csproj" />
     <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
