--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/Utils/Utils.csproj
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/Utils/Utils.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="IsValidCnpj.cs" />
+  </ItemGroup>
+
 </Project>
