--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/Persistence/Persistence.csproj
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/Persistence/Persistence.csproj
@@ -16,6 +16,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
