--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasAPI/SalasAPI.csproj
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasAPI/SalasAPI.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.9.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.9.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.9.0" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
