--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/SalasWeb.csproj
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/SalasWeb.csproj
@@ -42,6 +42,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
