--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/appsettings.json
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/appsettings.json
@@ -1,11 +1,10 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "server=localhost;port=3306;user=root;password=123456;database=automacaosalas"
+    "MySqlConnection": "placeholder-will-be-replaced-on-deploy"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
-
     }
   },
   "AllowedHosts": "*"
