VOLTANDO COMO ERA ANTES

--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/appsettings.json
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConnection": "placeholder-will-be-replaced-on-deploy"
+    "MySqlConnection": "server=localhost;port=3306;user=root;password=123456;database=automacaosalas"
   },
   "Logging": {
     "LogLevel": {
