--- a/.github/workflows/main-sistema-web.yml
+++ b/.github/workflows/main-sistema-web.yml
@@ -1,11 +1,34 @@
-name: AutomacaoSalas-WEB Deploy (FTP com Retry)
+name: AutomacaoSalas-WEB Deploy (Release)
 on:
-  push:
-    branches: [ master ]
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
+  test:
+    runs-on: windows-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '8.0'
+    
+    - name: Restore test dependencies
+      run: |
+        cd Codigo\ModuloDeSoftware\AutomacaoSalas\ServiceTests
+        dotnet restore
+    
+    - name: Run tests
+      run: |
+        cd Codigo\ModuloDeSoftware\AutomacaoSalas\ServiceTests
+        dotnet test --configuration Release --no-restore --verbosity normal
+    
   build-and-deploy:
+    needs: test
     runs-on: windows-latest
     
     env:
